source/components/home/navigation/styles.scss
.Navigation {
    $nav-height: 80px;

    .navbar {
        background-color: white;

        height: $nav-height;

        li{
            opacity: .98;            
        }
        .nav > li > a {
            line-height: $nav-height;
            color: black;
            font-weight: 600;
            text-transform: uppercase;
            letter-spacing: 0.5px;
            padding-top: 0;
            padding-bottom: 0;
            background-color: white;
        }
    }

    &__item {
        &--active {
            
        }
    }

    &__logo {
        min-width: 50px;
    }

}

